[metadata]
name=clearpath_config
version = attr: clearpath_config.__version__
author = Luis Camero
author_email = lcamero@clearpathrobotics.com
maintainer = Luis Camero
maintainer_email = lcamero@clearpathrobotics.com
description = Clearpath Configuration Parser

[options]
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
packages =
    clearpath_config
    clearpath_config.platform
    clearpath_config.system
    clearpath_config.mounts
    clearpath_config.sensors

[develop]
script_dir=$base/lib/clearpath_config

[install]
install_scripts=$base/lib/clearpath_config
